# pcsqcnn

./: .gitignore  ARTIFACTS.md  BUILD.md  INFO.md  README.md  build_all_figures.sh  pyproject.toml
notebooks/: inspect_artifact.py  train_qcnn.py
pennylane/: inspect_pennylane_artifact.py  pcs_qcnn_reference.py
run/: evaluate_error_structure.py  evaluate_finite_shot_loss_sampling.py  evaluate_finite_shot_snapshots.py  evaluate_gradient_norms.py  evaluate_readout_entropy.py  evaluate_readout_landscape.py  plot_brightness_sweep.py  plot_classical_baseline_architectures.py  plot_error_structure.py  plot_finite_shot_accuracy.py  plot_finite_shot_loss_histograms.py  plot_gradient_norms.py  plot_pcsqcnn_architecture_sweep.py  plot_pcsqcnn_image_size_sweep.py  plot_readout_entropy.py  plot_readout_landscape.py  plot_translated_mnist_baselines.py  prepare_brightness_sweep_data.py  prepare_full_mnist_classical_baselines_data.py  prepare_pcsqcnn_architecture_sweep_data.py  prepare_pcsqcnn_image_size_sweep_data.py  prepare_translated_mnist_baselines_data.py
tests/: __init__.py  script_loading.py  test_article_figures.py  test_article_training.py  test_automation.py  test_build_all_figures_sh.py  test_classic.py  test_data.py  test_docs.py  test_evaluate_error_structure.py  test_evaluate_finite_shot_loss_sampling.py  test_evaluate_finite_shot_snapshots.py  test_evaluate_gradient_norms.py  test_evaluate_readout_entropy.py  test_evaluate_readout_landscape.py  test_hybrid.py  test_layout.py  test_matplotlib_config.py  test_model.py  test_model_stats.py  test_notebook_smoke.py  (+22 more)
(+18 files in other folders)
