[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "qcnn"
version = "0.1.0"
description = "Torch-first PCS-QCNN utilities and encoder"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich>=14.1.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]

[project.optional-dependencies]
notebook = [
    "ipykernel>=6.30.1",
    "jupyterlab>=4.4.0",
    "matplotlib>=3.9.0",
    "marimo>=0.20.4",
    "nbformat>=5.10.4",
    "socksio>=1.0.0",
]
pennylane = [
    "pennylane>=0.43.0",
]
test = [
    "matplotlib>=3.9.0",
    "marimo>=0.20.4",
    "pennylane>=0.43.0",
    "pytest>=8.3.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/qcnn"]

[tool.hatch.build.targets.sdist]
include = [
    "/notebooks",
    "/README.md",
    "/pennylane",
    "/pyproject.toml",
    "/run",
    "/src/qcnn",
    "/tests",
]
